# AudioBridge

./: AudioBridge.manifest  CMakeLists.txt  README.md
src/: AudioBridge.rc  AudioResampler.cpp  AudioResampler.h  AudioRouter.cpp  AudioRouter.h  ComHelper.h  DeviceEnumerator.cpp  DeviceEnumerator.h  DialogProc.cpp  DialogProc.h  RingBuffer.h  WasapiCapture.cpp  WasapiCapture.h  WasapiRender.cpp  WasapiRender.h  main.cpp  resource.h
